[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"
#description = "Developer friendly load testing framework Based on asyncio"
#readme = "README.md"
#license = {text = "MIT License"}

[project]
name = "aiotest"
version = "0.5.8"
#authors = [
#  { name="hewei", email="hewei1987@163.com" },
#]

[tool.setuptools]


[tool.poetry]
name = "aiotest"
version = "0.5.8"
description = ""
authors = ["evgmart <evgeny.martemyanov@biocatch.com>"]

[tool.poetry.dependencies]
python = "~3.11"
aiohttp = "*"
aiosignal = "1.3.1"
async-timeout = "4.0.3"
attrs = "23.1.0"
charset-normalizer = "3.2.0"
colorama = "0.4.6"
frozenlist = "1.4.0"
idna = "3.4"
loguru = "0.7.1"
msgpack = "1.0.5"
multidict = "6.0.4"
pyzmq = "25.1.1"
win32-setctime = "1.1.0"
yarl = "1.9.2"
psutil = "5.9.5"
prometheus-client = "0.17.1"
tornado = ">=6.1"
uvloop = { version = "0.17.0", markers = "platform_system!='Windows'" }
mkdocstrings = { version = ">=0.18", extras = ["python"] }

[project.urls]
"Homepage" = "https://github.com/hewei198711/aiotest"

[project.scripts]
aiotest = "aiotest.main:run"